Online Store Web Application  Optimized High-Performance Version Using Virtual Threads